--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,10 @@
 # .gitattributes
 
+# Binary
+*.unity binary
+*.prefab binary
+*.asset binary
+
 # Images
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.jpeg filter=lfs diff=lfs merge=lfs -text
